Containerize freeradius and fix many issues